更新日志警告